--- a/ios/ListData/Info.plist
+++ b/ios/ListData/Info.plist
@@ -26,11 +26,16 @@
 	<true/>
 	<key>NSAppTransportSecurity</key>
 	<dict>
-	  <!-- Do not change NSAllowsArbitraryLoads to true, or you will risk app rejection! -->
-		<key>NSAllowsArbitraryLoads</key>
-		<false/>
-		<key>NSAllowsLocalNetworking</key>
+	<key>NSExceptionDomains</key>
+	<dict>
+		<key>jsonplaceholder.typicode.com</key>
+		<dict>
+		<key>NSExceptionAllowsInsecureHTTPLoads</key>
 		<true/>
+		<key>NSExceptionRequiresForwardSecrecy</key>
+		<false/>
+		</dict>
+	</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
